--- a/ExplicitIntent/app/src/main/AndroidManifest.xml
+++ b/ExplicitIntent/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
         </activity>
         <activity android:name=".Activity2">
         </activity>
+        <activity android:name=".Activity3">
+        </activity>
+        <activity android:name=".Activity4">
+        </activity>
     </application>
 
 </manifest>
